--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ArchitectureMVVMAPP</string>
+    <string name="mileage">Przebieg:</string>
+    <string name="brand">Brand</string>
+    <string name="model">Model</string>
+    <string name="registration_number">Nr rejestracyjny:</string>
+    <string name="save">Save</string>
+    <string name="delete_all_cars">Delete all cars</string>
 </resources>
